resources/public/css/stylesheet.css
/* CSS alpha version 0.1 Danate 2016-08-04 */

@import url(http://fonts.googleapis.com/css?family=Open+Sans:100,400,700|Oswald:normal|Cabin+Sketch:normal|Lobster:normal);

/* Animation */

@keyframes iMapcha {
    from {color:red;}
    to {color:yellow;}
}

/********************/
/* Universal Styles */
/********************/

body {
    font-family:Open Sans;
    font-size:16px;
    height:100vh;
    background-image:url(../img/chaBG.jpg);
    -webkit-background-size:cover;
    -moz-background-size:cover;
    -o-background-size:cover;
    background-size:cover;
}

header, nav, section, footer {
    display:block;
}

.button {
    line-height:100% !important;
    text-overflow:ellipsis;
    cursor:pointer;
    background-color:#3FABC6 !important;
    color:white;
    font-family:Oswald !important;
    text-transform:uppercase;
    border-radius:0px !important
    /* Safari 3-4, iOS 1-3.2, Android 1.6- */
    -webkit-border-radius:0px !important;
    /* Firefox 1-3.6 */
    -moz-border-radius:0px !important;
    /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
    border-radius:0px !important;
}

header {
    position:fixed;
    top:0rem;
    left:0rem;
    height:6.5rem;
    width:100%;
    color:#eee;
    background-color:white;
    background-image:url(http://www.adpc.net/igo/images/SERVIR/usaid.png),
                     url(http://www.adpc.net/igo/images/SERVIR/nasa.png),
                     url(http://www.adpc.net/igo/images/SERVIR/ADPC.jpg),
                     url(http://www.adpc.net/igo/images/SERVIR/servir.png);
    background-repeat:no-repeat;
    background-attachment:fixed;
    background-position:1rem 15px, 9rem 15px, 12rem 15px, right 15px;
    background-size:auto 35px, auto 35px, auto 35px, auto 25px;
    z-index:100;
}

header a:link,
header a:visited,
header a:active,
footer a:link,
footer a:visited,
footer a:active {
    color:black !important;
    text-decoration:none;
}

header a:hover,
footer a:hover {
    color:#999;
}

header a.active-link {
    color:#999;
}

header h1 {
    z-index:2;
    width:calc(60vw - 200px);
    top:4rem !important;
    left:1rem !important;
    position:absolute;
    font-family:Lobster;
    text-transform:uppercase;
    text-decoration:underline;
    font-size:2rem;
    font-weight:400;
    color:white !important;
}

nav {
    position:absolute;
    top:14px;
    left:16.5rem;
    height:2.5rem;
}

nav ul {
    padding:0.7rem;
    font-size:0.9rem;
}

nav ul li {
    display:inline;
    list-style-type:none;
    padding:0.4rem;
}

#login-info {
    position:absolute;
    top:2.3rem;
    right:0rem;
    padding:0.7rem 0rem;
    font-size:0.8rem;
    z-index:30;
}

#login-info a {
    margin-left:0.7rem;
    padding:0.4rem;
    border:1px solid #999;
    border-radius:0rem;
    color:black !important;
}

#login-info p {
    color:black !important;
}

#content {
    position:fixed;
    top:6.5rem;
    left:0rem;
    height:calc(100vh - 6.5rem - 2.4rem);
    width:100%;
    background-color:rgba(255,255,255,0.2);
}

#content h3 {
    position:fixed; /* or absolute */
    right:5rem !important;
    height:100%;
    width:350px;
    padding:2rem;
    background:rgba(255, 255, 255, 0.8);
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
    -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
}

footer {
    position:fixed;
    bottom:0rem;
    left:0rem;
    height:2.4rem;
    width:100%;
    color:#eee;
    background-color:white;
}

footer p {
    padding:0.8rem 2.4rem;
    font-size:0.9rem;
}

h1,h2,h3,h4,h5,h6 {
    color:#55f;
}

/********/
/* Home */
/********/

#home-top #left-block{
    border-radius:0rem !Important;
    border:none;
}

#left-block {
    right:5rem !important;
    height:100%;
    width:350px;
    padding:2rem;
    background:rgba(255, 255, 255, 0.8);
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
    -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#CCFFFFFF, endColorstr=#CCFFFFFF);
    position:fixed; /* or absolute */
}

#left-block h1 {
    font-size:2rem;
    font-weight:bold;
    padding:0.5rem 0.5rem 0.5rem 1rem;
}

#left-block h2 {
    font-size:1rem;
    font-style:italic;
    padding:0.5rem 0.5rem 0.75rem 1rem;
}

#home-top #right-block{
    display:none;
}

#right-block {
    position:absolute;
    top:1rem;
    right:0rem;
    height:20rem;
    width:17rem;
}

#right-block input:not(.button) {
    width:15rem;
    margin:0.3rem;
    border:1px solid #999;
    border-radius:0.25rem;
}

#right-block input:not(.button):focus {
    border:1px solid #55f;
    /* box-shadow:0rem 0rem 0.5rem rgba(21,21,153,0.8); */
}

#right-block input.button {
    width:15rem;
    margin:0.3rem;
    padding:0.3rem;
    color:white;
    background-color:#55f;
    border-radius:1rem;
    /* box-shadow:0.25rem 0.25rem 0.5rem rgba(21,21,153,0.6); */
}

#left-block h1{
    color:gray;
    text-transform:uppercase;
    margin-bottom:20px;
    font-size:3em;
    margin-top:20px;
    line-height:80%;
}

#left-block h1 em{
    font-size:0.8em !important;
    font-weight:400;
}

#left-block h2{
    color:#3C948B;
    font-family:Courier New;
    font-weight:400;
    font-size:1.1em;
    font-style:normal;
}


#right-block input.button:focus {
    border:1px solid #999;
}

#login {
    width:16rem;
    padding:0.5rem;
    background-color:#e0e0e0;
}

#login p#forgot-password a {
    font-size:3rem;
    font-weight:bold;
    margin-left:0.25rem;
}

#login p#forgot-password a {
    color:#009;
    text-decoration:none;
}

#register {
    margin-top:1rem;
    width:16rem;
    padding:0.5rem;
    background-color:#e0e0e0;
    border-radius:1rem;
}

#register h3 {
    font-size:1.1rem;
    font-weight:bold;
    padding:0.3rem;
}

#home-content p {
    margin:1rem 0rem;
    display:none;
}

.trademark {
    font-style:italic;
}
/* ... */

